--- a/quemsomos.html
+++ b/quemsomos.html
@@ -43,30 +43,18 @@
     </section>
     <div class="nos">
         <div class="walter">
-            Walter Santa Cruz Júnior
-            <br>
-            Turma: IA23
-            <br>
-            Possui 16 anos, mora em Camboriú e gosta de pescar.
-            <div class="foto1"></div>
-        </div>
-        <div class="joao">
-            João Gabriel Rodrigues Bencz
-            <br>
-            Turma: Ex-aluno da IA23 :(
-            <br>
-            Possui 17 anos, mora em Balneário Piçarras e gosta de malhar.
-            <div class="foto2"></div>
+        
+            <img src="waltinsdad.png" alt="" class="foto1">
         </div>
         <div class="rian">
-            Rian Marcelo da Nascimento Evaristo
-            <br>
-            Turma: IA23
-            <br>
-            Possui 16 anos, mora em Balneário Camboriú e gosta de jogar basquete.
+        <img src="rian(1).png" class="foto4">
             <div class="foto3"></div>
         </div>
     </div>
+
+
+
+    <a href="" class="g2">time</a>
 </body>
 
 </html>
